--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -16,15 +16,19 @@
       <app-breadcrums></app-breadcrums>
 
       <!---Routing sistem-->
-      <div class="row">
+      <router-outlet></router-outlet>
+      
+      <!-- <div class="row">
         <div class="col-12">
           <div class="card">
-            <router-outlet></router-outlet>
-            <!-- <div class="card-body">This is some text within a card block.</div> -->
+            
+            
+            
+           
           </div>
         </div>
-      </div>
-    </div>
+      </div> -->
+    </div> 
 
     <!-- ============================================================== -->
     <!-- footer -->
