--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,66 @@
-<p>progress works!</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+        <h4 class="card-title">Striped Progress bar</h4>
+
+        <!--Active progress bar-->
+        <div class="progress m-t-20">
+          <div
+            class="progress-bar bg-info progress-bar-striped active"
+            aria-valuenow="85"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            style=" height: 5px"
+            [style.width]="getPorcentaje"
+            role="progressbar"
+          >
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--Form-->
+</div>
+
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <div class="input-group">
+          
+          <span class="input-group-btn">
+            <button class="btn btn-primary" 
+            (click)="cambiarValor(-5)" 
+            type="button">
+              <i class="fa fa-minus"></i>
+            </button>
+          </span>
+
+          <input type="number" class="form-control" 
+          min="0"
+          max="100"
+          [(ngModel)]="progreso"
+          placeholder="Product name" />
+
+          <span class="input-group-btn">
+            <button class="btn btn-primary"
+            (click)="cambiarValor(5)"
+            type="button">
+              <i class="fa fa-plus"></i>
+            </button>
+          </span>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">2</div>
+    </div>
+  </div>
+</div>
